--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       name="description"
       content="Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, nemo officiis. Fugiat, est impedit. Dicta cum ut assumenda illum nobis."
     />
-    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
